--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -107,8 +107,11 @@ color: #3b5998 !important;
 .social ul li{
     display: inline-block;
 }
-.heroSlider .owl-next,.heroSlider .owl-prev
-{
+.workSlider .owl-stage-outer{
+    min-height: 550px;
+}
+.heroSlider .owl-next,.heroSlider .owl-prev,.donateSlider .owl-next,.donateSlider .owl-prev{
+
     position: absolute;
     top:50%;
     color:white;
@@ -129,7 +132,7 @@ right:10px;
     left:45%;
     z-index: 66666;
 }
-.owl-dots .owl-dot{
+.heroSlider .owl-dots .owl-dot{
 width:10px;
 height:10px;
 border:2px solid white;
@@ -137,7 +140,7 @@ margin-left:10px;
 border-radius: 50%;
 display: inline-block;
 }
-.owl-dots .owl-dot.active{
+.heroSlider .owl-dots .owl-dot.active{
 background-color: white;
 }
 .heroText{
@@ -253,10 +256,7 @@ text-align: left;
     padding-bottom:40px;
 }
 
-.newsSlider .owl-stage-outer{
-    min-height: 500px !important
 
-}
 .card-body{
     padding:35px 35px 45px !important
 }
@@ -582,6 +582,75 @@ background-color:rgba(0,0,0,.4);
 }
 .DonatCont{
     padding:50px 0;
+    background-color:#fafafa;
+}
+.donateSlider{
+    max-height: 850px;
+    margin-bottom:30px;
+}
+.donatCarouselItem{
+    width:100%;
+}
+.donateSlider .owl-next
+,.donateSlider .owl-prev{
+    top:25%;
+}
+.donateSlider .owl-next
+{
+right:0;
+}
+.donateSlider .owl-prev{
+    left:0
+}
+.donateImgCont{
+    position: relative;
+}
+.donateDesc ,.donatBox{
+    padding:60px 70px;
+    background-color:white;
+    color:#cdcdcd;
+}
+.donateDesc h4{
+font-size:24px;
+color:black;
+}
+.donateDesc p,.donatBox p{
+    font-size:14px;}
+    .donatBox{
+        padding:60px 30 100px 30px;
+        background-color: white;
+
+}
+.donatBox h4{
+    font-size:20px;
+    color:black
+}
+.donatBox p{
+    max-width: 70%;
+}
+.donateForm{
+    margin-top:20px;
+}
+.form-control{
+    background-color:#f6f6f6;
+    border:0;
+    padding:20px;
+    border-radius: 0;
+}
+.form-control::placeholder{
+    font-size:14px;
+    color:#939393;
+}
+.form-group.inlinegroup{
+    width:48%;
+    display: inline-block;
+    
+}
+.form-group.lastinput{
+    margin-left:30px;
+}
+textarea{
+    resize: none;
 }
 /********************************************/
  @media (max-width: 767px){
