--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,15 +1,17 @@
 body{
     font-family: 'Poppins', sans-serif;
         position: relative;
+        font-size: 16px;
 }
 
 .nav-item{
-    margin-right:41px;
+    margin-right:2em;
+    font-size: 1em
 }
 
 .nav-link{
     font-family: 'Poppins', sans-serif;
-font-size:16px;
+/* font-size:16px; */
 color:white;
 padding:30px 0 !important;
 font-weight: 400;
@@ -19,13 +21,17 @@ font-weight: 400;
 }
 .hero{
     width:100%;
-
+    position: relative;
+}
+.navbar-custom{
+    width: 100%;
 }
 .heroSlider{
     width:100%;
-    height:100%;
+    height:100vh;
+    overflow: hidden;
     position: relative;
-    z-index: -1;
+    z-index: 2;
 }
 .overlay{
     background-color: rgba(0,0,0,.43);
@@ -42,18 +48,43 @@ font-weight: 400;
 }
 
 .navbar-brand{
-    width:100px !important;
+    width:100px;
     transition: 1s all;
+    margin:0 !important;
 }
+
 img{
     width:100%;
 }
 .social .nav-item{
     margin-right:35px;
 }
+
+
+
 .main-menu{
 width:100%;
+position: absolute;
 transition: 1s all;
+z-index: 15;
+}
+
+.dropdown-menu{
+    left: auto;
+    background: transparent;
+    border:1px solid white;
+    top:60px;
+
+}
+.dropdown-menu a{
+    color: #fff;
+
+}
+.scrollNav .dropdown-menu{
+    background: #fff;
+    top:81px;}
+.scrollNav .dropdown-menu a{
+    color: black;
 }
 .scrollNav {
     top: 0 !important;
@@ -65,7 +96,7 @@ transition: 1s all;
     transition: 1s all;
     left: 0;
     width:100%;
-    height:80px;
+    height:95px;
 }
 .scrollNav .nav-link{
     color:black ;
@@ -94,41 +125,43 @@ color: #3b5998 !important;
 .Donate{
     background-color:#8fd445 !important;
     border-radius: 40px;
-    font-size: 16px;
+    font-size: .9em;
     color:white;
     border:0;
-    width:100px;
-    height:43px;
+    padding: 0px 10px;
+    /* width:100px;
+    height:43px; */
     line-height: 37px
-}
+}   
 .languge:hover{
     background-color:#8fd445 ;
+}
+.social .navbar-nav{
+    display: inline-block;
 }
 .social ul li{
     display: inline-block;
 }
-.workSlider .owl-stage-outer{
-    min-height: 550px;
-}
+
 .heroSlider .owl-next,.heroSlider .owl-prev,.donateSlider .owl-next,.donateSlider .owl-prev{
 
     position: absolute;
     top:50%;
     color:white;
-    font-size: 40px;
+    font-size: 2em;
     z-index: 5;
 }
 .heroSlider .owl-prev
 {
-left:10px;
+left:10%;
 }
 .heroSlider .owl-next
 {
-right:10px;
+right:10%;
 }
 .owl-dots{
     position: absolute;
-    bottom: -10px;
+    bottom: 20px;
     left:45%;
     z-index: 66666;
 }
@@ -145,13 +178,14 @@ background-color: white;
 }
 .heroText{
 position: absolute;
-top:20%;
-left:25%;
-    color:white;
-    font-weight: 500;
+top:40%;
+z-index: 11;
+left:28%;
+color:white;
+font-weight: 500;
 }
 .heroText span{
-    font-size:65px;
+    font-size:3em;
     background-color:#8fd445 ;
     padding:5px;
  
@@ -200,11 +234,11 @@ margin-bottom: 25px;
     left:32%;
 }
 .workSlider{
-    height:520px !important;
+    /* height:520px !important; */
 }
 .worksliderItem{
     cursor: pointer;
-    height:520px;
+    /* height:520px; */
 }
 .workslideImg{
     height:100%
@@ -234,6 +268,9 @@ margin:auto;}
     left:0;
     bottom:-7px;
 }
+.readMore{
+    padding:0 15px;
+}
 .readMoreNews{
     position: absolute;
     background-color:#8fd445;
@@ -247,7 +284,10 @@ left:25%;
 .newsSlider{
     margin-top:65px;
 }
-.newsSliderItem .card{
+.newsSlider .owl-stage-outer{
+    min-height:500px;
+}
+ .card.newsCard{
 background-color:#f0f1f3;
 border:0;
 text-align: left;
@@ -512,7 +552,7 @@ margin-bottom:30px;
     margin:0 auto;
 
 }
-.card-img-top{
+.childimg .card-img-top{
     border-radius: 50%;
 }
 .pagenationNav{
@@ -753,9 +793,95 @@ color:white;
     color:#c4302b !important;
     transition: 1s all;
   }
+  .newsPage{
+      margin-bottom:80px;
+  }
+  .card.projectPage{
+      background-color: white;
+      box-shadow: 0 0 10px 1px rgba(0,0,0,.1);
+      margin-bottom:30px;
+      transition: all .5s;
+ }
+ .card.projectPage:hover{
+    box-shadow: 0px 0px 15px 5px rgba(0,0,0,.3);
+    margin-top:1px;
+    transition: all .5s;
+ }
+.projectPage .card-img-top{
+    height:340px;
+}
+.card.projectPage .card-body{
+    padding:30px !important;
+}
+.card.projectPage .card-title{
+font-size:24px;
+line-height: 1.5;
 
+}
+.projectDonat{
+    background-color: #8fd445;
+    color:white;
+    border-radius: 0;
+    font-size:18px;
+}
+.privacy-title{
+font-size:20px;
+}
+.Privacy-Box{
+    padding:45px 70px;
+    background-color: white;
+}
+.Privacy-Section{
+    margin-bottom:50px;
+}
+.privacy-par{
+    font-size:14;
+    color:#9b9b9b;
+}
+.teamMemberImg{
+    width:100%;
+    height:190px;
+}
+.teamMemberImg img{
+border-radius:50%;
+}
 /********************************************/
  @media (max-width: 767px){
+     .navbar-toggler{
+         position: absolute;
+        top:18px;
+         left:10px;
+         border-color:white
+     }
+     .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(143, 212, 69, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+      
+     .navbar-brand{
+         float:right;
+         width:70px;
+     }
+     .navbar-collapse{
+        position: absolute;
+        background: rgb(255, 255, 255);
+        color: black !important;
+        left:0;
+        top:70px;
+        padding: 20px;
+        width:100%;
+        text-align: center;
+        z-index: 12;
+
+     }
+     .scrollNav .navbar-collapse{
+top:80px;
+     }
+    .scrollNav  .navbar-toggler{
+border-color:#8fd445;
+     }
+     .navbar-collapse .nav-link{
+         color:black;
+     }
     .countnum{
         font-size:32px;
     }
@@ -771,11 +897,35 @@ color:white;
     .workSection .title{
         padding:20px;
     }
-    .heroText span{
-        font-size:35px
+    .heroText{
+        top: 33%;
+        z-index: 11;
+        left: 10%;
+        max-width:80%;
     }
+    .heroText span{
+        font-size:1.5em
+    }
+     .heroText p{
+         font-size:1em;
+         margin-top:5px;
+         margin-bottom:10px;
+     }
+     .heroSlider{
+         height: auto;
+     }
+     .heroSlider .owl-nav{
+         display: none;
+     }
+     .heroSlider .owl-dots{
+bottom:0;
+left:37%;
+     }
     .countDetails{
         font-size:16px;
+    }
+    .btn{
+        font-size:12px;
     }
 .donateDesc,.contactFormBox,.donatBox,.informationBox.contactFormBox{
     padding:10px;
