--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1136,6 +1136,33 @@ padding: 30px 10px;
 .singleNews .card-title{
     font-size:16px;
 }
+.aboutBox{
+    width:100%;
+    padding:80px 40px;
+    margin-bottom:30px;
+}
+.YellowOverlay{
+background-color:rgba(195, 193, 49, .15);
+position: absolute;
+left:0;
+top:0;
+width:100%;
+height: 100%;
+z-index: 1;
+}
+.OurMission{
+    background-image: url("../img/about1.png");
+    position: relative;
+}
+.aboutTitle{
+    font-size:1.875em;
+    color:white;
+    margin-bottom:30px;
+}
+.aboutBox p{
+    font-size:.856em;
+    color:white;
+}
 /********************************************/
  @media (max-width: 767px){
      .navbar-toggler{
