--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -162,7 +162,7 @@ right:10%;
 .owl-dots{
     position: absolute;
     bottom: 20px;
-    left:45%;
+    left:46%;
     z-index: 66666;
 }
 .heroSlider .owl-dots .owl-dot{
@@ -180,7 +180,7 @@ background-color: white;
 position: absolute;
 top:40%;
 z-index: 11;
-left:28%;
+left:22%;
 color:white;
 font-weight: 500;
 }
@@ -233,19 +233,26 @@ margin-bottom: 25px;
     bottom:80px;
     left:32%;
 }
-.workSlider{
-    /* height:520px !important; */
-}
+
 .worksliderItem{
     cursor: pointer;
-    /* height:520px; */
+    transition: 1s all;
+    overflow: hidden;
+
+  
 }
 .workslideImg{
-    height:100%
+    height:100%;
+    overflow: hidden;
+}
+.worksliderItem:hover{
+    transition: 1s all;
 }
 .worksliderItem:hover .workslideImg{
     outline: 1px solid #a7a19a;
-    outline-offset: -15px;
+    outline-offset: -25px;
+    transform: scale(1.1);
+    transition: 1s all;
 }
 .worksliderItem:hover .WorkDonate{
   visibility: visible;
@@ -292,8 +299,13 @@ background-color:#f0f1f3;
 border:0;
 text-align: left;
 }
-.newsSliderItem .card-body{
-    padding-bottom:40px;
+.newsSliderItem{
+cursor: pointer;
+transition: 1s all;
+}
+.newsSliderItem:hover{
+transition: 1s all;
+box-shadow: 0 0 15px 5px rgba(0,0,0,.1)
 }
 .newsSliderItem .card-body{
     padding:35px 35px 45px ;
@@ -1220,6 +1232,7 @@ border-color:#8fd445;
         z-index: 11;
         left: 10%;
         max-width:80%;
+
     }
     .heroText span{
         font-size:1.5em
